--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.16.0",
     "styled-components": "^6.1.0",
     "swiper": "^10.3.1"
